js/src/views/ParityBar/parityBar.css
/* Copyright 2015, 2016 Ethcore (UK) Ltd.
/* This file is part of Parity.
/*
/* Parity is free software: you can redistribute it and/or modify
/* it under the terms of the GNU General Public License as published by
/* the Free Software Foundation, either version 3 of the License, or
/* (at your option) any later version.
/*
/* Parity is distributed in the hope that it will be useful,
/* but WITHOUT ANY WARRANTY; without even the implied warranty of
/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
/* GNU General Public License for more details.
/*
/* You should have received a copy of the GNU General Public License
/* along with Parity.  If not, see <http://www.gnu.org/licenses/>.
*/

.bar, .expanded {
  position: fixed;
  bottom: 0;
  right: 0;
  font-size: 16px;
  font-family: 'Roboto', sans-serif;
  z-index: 10001;
}

.overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(255, 255, 255, 0.5);
  z-index: 10000;
}

.bar {
  vertical-align: middle;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.expanded {
  right: 16px;
  max-height: 300px;
  border-radius: 4px 4px 0 0;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.expanded .content {
  flex: 1;
  overflow: auto;
  display: flex;
  background: rgba(0, 0, 0, 0.8);
  min-height: 300px;
}

.corner {
  position: absolute;
  bottom: 0;
  right: 16px;
  border-radius: 4px 4px 0 0;
}

.cornercolor {
  background: rgba(0, 0, 0, 0.5);
  padding: 0.5em 1em;
}

.link {
  white-space: nowrap;
  border: none;
  outline: none !important;
  color: white !important;
  display: inline-block;
}

.link img, .link svg {
  height: 24px !important;
  width: 24px !important;
  margin: 2px 0.5em 0 0;
}

.link+.link {
  margin-left: 1em;
}

.button, .parityButton {
  overflow: visible !important;
}

.parityButton img {
  width: auto !important;
  height: 24px;
}

.button svg {
  fill: white !important;
}

.label {
  position: relative;
  display: inline-block;
  vertical-align: top;
}

.labelText {
  text-transform: uppercase;
  vertical-align: top;
}

.labelBubble {
  position: absolute;
  top: 0px;
  right: -10px;
}

.header {
  height: 36px;
  padding: 0.5em 1em;
  background: rgba(0, 0, 0, 0.25);
  margin-bottom: 0;
}

.header:after {
  clear: both;
}

.header button,
.corner button {
  color: white !important;
}

.header svg,
.coner svg {
  fill: white !important;
}

.body {
  padding: 1em;
}

.title {
  float: left;
}

.actions {
  float: right;
}

.actions div {
  margin-left: 1em;
  display: inline-block;
  cursor: pointer;
}

.parityIcon, .signerIcon {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  margin-left: 12px;
}

